<resources>
    <string name="app_name">代工帮</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home"></string>
    <string name="factory"></string>
    <string name="product"></string>
    <string name="news"></string>
    <string name="my"></string>
    <string name="title_activity_my_other">MyOtherActivity</string>
    <string name="clean_history_record">是否同意清除搜索历史记录</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>

    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_newpwd_number">请输入新密码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入6位数验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="url_add_qq_group"><![CDATA[https://qm.qq.com/cgi-bin/qm/qr?k=0lUqsbfHTNDbS2KK4nTPwPq07tOqAk6J&authKey=4PzQ2cQYIr28Qyg%2FkTk%2BmI7xlcq8B0IZKZGc1H3XloRrCDBO8az97DIsBHnQW0Ya]]></string>
    <string name="expand">展开</string>
    <string name="collapse">收起</string>

</resources>