<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.activity.my.ResetpasswordActivity">
    <include
        android:id="@+id/include_title"
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                android:background="@drawable/username" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_phone_number"
                android:inputType="number"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_phone_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_phone_number"
                app:met_regexp="@string/regex_phone_number" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                android:background="@drawable/password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_verify_code"
                android:inputType="number"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_verify_code_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_verify_code"
                app:met_maxCharacters="6"
                app:met_regexp="@string/regex_verify_code" />

            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                android:id="@+id/btn_get_verify_code"
                style="@style/RoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:paddingBottom="3dp"
                android:text="@string/action_get_verify_code"
                android:textColor="@color/selector_round_button_main_theme_color"
                android:textSize="13sp"
                app:rb_borderColor="@color/selector_round_button_main_theme_color"
                app:rb_borderWidth="1.5dp"
                app:rb_radius="15dp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/factory_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                android:background="@drawable/username" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/new_pwd_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_newpwd_number" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/logoff_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/findfactorybotton"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/xui_picker_view_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16"
        android:textStyle="bold"></TextView>
</LinearLayout>