<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:id="@+id/action_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></View>

    <FrameLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/fF3F4F5">

    </View>

    <LinearLayout
        android:id="@+id/LinearLayout_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_weight="0"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_ima"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_select_iv"></ImageView>

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/home"
                android:textColor="@drawable/home_select_tv"

              >

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/factory_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/factory_ima"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_factory_select_iv">

            </ImageView>

            <TextView
                android:id="@+id/factory_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:text="@string/factory"
                android:textColor="@drawable/home_factory_select_tv"
              >

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/product_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_ima"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_product_select_iv">

            </ImageView>

            <TextView
                android:id="@+id/product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/product"
                android:textColor="@drawable/home_product_select_tv"

              >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/news_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/news_ima"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_news_select_iv">

            </ImageView>

            <TextView
                android:id="@+id/news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/news"
                android:textColor="@drawable/home_my_select_tv"

              >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/my_ima"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_my_select_iv">

            </ImageView>

            <TextView
                android:id="@+id/my_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:text="@string/my"
                android:textColor="@drawable/home_my_select_tv"

              >

            </TextView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>